--- a/Index.html
+++ b/Index.html
@@ -24,10 +24,18 @@
     <section></section>
 
     <!--Carrusel de intituciones/ intituciones participantes-->
-    <section></section>
+    <section>
+        aqui no afecta el color
+    </section>
 
     <!--Formulario de Contacto / ¿Quieres ayudar?-->
-    <section></section>
+    <section>
+        <div style="background: linear-gradient(to right, #58257B, #e62e7b);">
+            aqui va la informacion
+            <br>
+            y aqui continua 
+        </div>
+    </section>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
