--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,18 @@
     <section></section>
 
     <!--Formulario de Contacto / ¿Quieres ayudar?-->
-    <section></section>
+    <section>
+        <h1>Envíanos un mensaje</h1>
+        <div>
+            <input type="text" name="Nombre" >
+            <br>
+            <input type="text" name="Correo">
+            <br>
+            <input type="text" name="Mensaje">
+            <br>
+        </div>
+        
+    </section>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
