actualizacion de secciones

--- a/Index.html
+++ b/Index.html
@@ -6,22 +6,133 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/boton.css">
+
+    <style>
+    </style>
 </head>
 <body>
     <!--Sección Encabezado-->
     <section></section>
 
     <!--Sección Quienes Somos-->
-    <section></section>
+    <section>
+        <div class="container">
+            <div class="row justify-content-md-center">
+              <div class="col col-lg-12">
+                <div>
+                    <h1><p class="text-center">Quiénes Somos</p></h1>
+                    <h3><p class="text-center">ipsum</p></h3>
+                    <h5>
+                        <p class="text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, animi! Id eum necessitatibus unde eveniet debitis, provident ipsam asperiores sequi ducimus eius corrupti! Voluptatibus nisi cupiditate voluptate, vero molestias molestiae. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio voluptate possimus dignissimos commodi veniam explicabo debitis molestiae eaque necessitatibus quaerat consectetur quae, suscipit officia qui accusamus excepturi dolores deleniti ducimus?</p>
+                    </h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
+    <br>
+    
 
     <!--Sección Link Instituciones/iniciativas/Atencion Psicologica/Voluntarios-->
-    <section></section>
+    <section>
+        <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                <div class="form-row text-center">
+                    <div class="col-12">
+                        <div class="text-white">
+                            <img class="card-img" src="imagenes/mancha.png" alt="Card image">
+                            <div class="card-img-overlay">
+                                <br><br><br><br>
+                                <h6><p class="text-center">Intituciones de Salud</p></h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <button type="button" class="btn btn-ttc btn-sm" style="border-radius: 25px; width: 150px;"> Ver mas +</button>
+                    </div>
+                </div>
+              </div>
+              <div class="col-sm">
+                <div class="form-row text-center">
+                    <div class="col-12">
+                        <img src="" alt="">
+                        <div style="background-image: url();">
+                            aqui voy a escribir mas
+                            <br>
+                             y luego
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <button type="button" class="btn btn-ttc btn-sm" style="border-radius: 25px; width: 150px;"> Ver mas +</button>
+                    </div>
+                </div>
+              </div>
+              <div class="col-sm">
+                <div class="form-row text-center">
+                    <div class="col-12">
+                        <div class="text-white">
+                            <img class="card-img" src="imagenes/mancha.png" alt="Card image">
+                            <div class="card-img-overlay">
+                                <br><br><br><br>
+                                <h6><p class="text-center">Atención <br> Psicologica</p></h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <button type="button" class="btn btn-ttc btn-sm" style="border-radius: 25px; width: 150px;"> Ver mas +</button>
+                    </div>
+                </div>
+              </div>
+              <div class="col-sm">
+                <div class="form-row text-center">
+                    <div class="col-12">
+                        <div class="text-white">
+                            <img class="card-img" src="imagenes/mancha.png" alt="Card image">
+                            <div class="card-img-overlay">
+                                <br><br><br><br>
+                                <h6><p class="text-center">Voluntarios</p></h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <button type="button" class="btn btn-ttc btn-sm" style="border-radius: 25px; width: 150px;"> Ver mas +</button>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
+    </section>
 
     <!--Contactanos-->
     <section></section>
 
     <!--Carrusel de Noticias / Al momento-->
-    <section></section>
+    <section>
+        <div style="width: 95%;">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                      <div>
+                          aqui va la informacion A
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                      <div>
+                          aqui va la informacion b
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                      <div>
+                          aqui va la informacion B
+                      </div>
+                  </div>
+                </div>
+              </div>
+        </div>
+    </section>
 
     <!--Carrusel de intituciones/ intituciones participantes-->
     <section>
