--- a/Index.html
+++ b/Index.html
@@ -7,9 +7,18 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/boton.css">
-
+    <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
+    <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet">
+    <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet">
     <style>
-    </style>
+        .carousel-control-prev-icon {
+            background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='ffffff' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+        }
+        
+        .carousel-control-next-icon {
+            background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='ffffff' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+        }
+        </style>
 </head>
 <body>
     <!--Sección Encabezado-->
@@ -42,11 +51,25 @@
               <div class="col-sm">
                 <div class="form-row text-center">
                     <div class="col-12">
+                        <div class=" text-white">
+                            <img class="card-img" src="imagenes/mancha.png" alt="Card image">
+                            <div class="card-img-overlay" style="top: 40%;">
+                              <h6 class="card-title">Intituciones de Salud</h6>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-12">
+                        <button type="button" class="btn btn-ttc btn-sm" style="border-radius: 25px; width: 150px;"> Ver mas +</button>
+                    </div>
+                </div>
+              </div>
+              <div class="col-sm">
+                <div class="form-row text-center">
+                    <div class="col-12">
                         <div class="text-white">
                             <img class="card-img" src="imagenes/mancha.png" alt="Card image">
-                            <div class="card-img-overlay">
-                                <br><br><br><br>
-                                <h6><p class="text-center">Intituciones de Salud</p></h6>
+                            <div class="card-img-overlay" style="top: 40%;">
+                                <h6><p class="text-center">Iniciativa</p></h6>
                             </div>
                         </div>
                     </div>
@@ -58,25 +81,9 @@
               <div class="col-sm">
                 <div class="form-row text-center">
                     <div class="col-12">
-                        <img src="" alt="">
-                        <div style="background-image: url();">
-                            aqui voy a escribir mas
-                            <br>
-                             y luego
-                        </div>
-                    </div>
-                    <div class="col-12">
-                        <button type="button" class="btn btn-ttc btn-sm" style="border-radius: 25px; width: 150px;"> Ver mas +</button>
-                    </div>
-                </div>
-              </div>
-              <div class="col-sm">
-                <div class="form-row text-center">
-                    <div class="col-12">
                         <div class="text-white">
                             <img class="card-img" src="imagenes/mancha.png" alt="Card image">
-                            <div class="card-img-overlay">
-                                <br><br><br><br>
+                            <div class="card-img-overlay" style="top: 40%;">
                                 <h6><p class="text-center">Atención <br> Psicologica</p></h6>
                             </div>
                         </div>
@@ -91,8 +98,7 @@
                     <div class="col-12">
                         <div class="text-white">
                             <img class="card-img" src="imagenes/mancha.png" alt="Card image">
-                            <div class="card-img-overlay">
-                                <br><br><br><br>
+                            <div class="card-img-overlay" style="top: 40%;">
                                 <h6><p class="text-center">Voluntarios</p></h6>
                             </div>
                         </div>
@@ -105,33 +111,109 @@
             </div>
           </div>
     </section>
+    <br>
+    <br>
 
     <!--Contactanos-->
     <section></section>
 
     <!--Carrusel de Noticias / Al momento-->
     <section>
-        <div style="width: 95%;">
-            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                      <div>
-                          aqui va la informacion A
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="container">
+                    <div class="row justify-content-md-center">
+                      <div class="col col-lg-12">
+                        <div class="container">
+                            <div class="row">
+                              <div class="col-sm">
+                                <img src="imagenes/noticia1.jpg" class="img-fluid" alt="Responsive image">
+                              </div>
+                              <div class="col-sm">
+                                <div class="container">
+                                    <div class="row justify-content-md-center">
+                                        <div class="media-body" style="margin: 50px">
+                                            <h5 class="mt-0">Top-aligned media</h5>
+                                            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+                                            <button type="button" class="btn btn-ttc btn-sm" style="border-radius: 25px; width: 150px;"> Ver mas +</button>
+                                          </div>
+                                    </div>
+                                  </div>
+                              </div>
+                            </div>
+                          </div>
                       </div>
+                    </div>
                   </div>
-                  <div class="carousel-item">
-                      <div>
-                          aqui va la informacion b
-                      </div>
-                  </div>
-                  <div class="carousel-item">
-                      <div>
-                          aqui va la informacion B
-                      </div>
-                  </div>
-                </div>
               </div>
-        </div>
+              <div class="carousel-item">
+                <div class="container">
+                    <div class="row justify-content-md-center">
+                      <div class="col col-lg-12">
+                        <div class="container">
+                            <div class="row">
+                              <div class="col-sm">
+                                <img src="imagenes/noticia1.jpg" class="img-fluid" alt="Responsive image">
+                              </div>
+                              <div class="col-sm">
+                                <div class="container">
+                                    <div class="row justify-content-md-center">
+                                        <div class="media-body" style="margin: 50px">
+                                            <h5 class="mt-0">Top-aligned media</h5>
+                                            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+                                            <button type="button" class="btn btn-ttc btn-sm" style="border-radius: 25px; width: 150px;"> Ver mas +</button>
+                                        </div>
+                                    </div>
+                                  </div>
+                              </div>
+                            </div>
+                          </div>
+                      </div>
+                    </div>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                <div class="container">
+                    <div class="row justify-content-md-center">
+                      <div class="col col-lg-12">
+                        <div class="container">
+                            <div class="row">
+                              <div class="col-sm">
+                                <img src="imagenes/noticia1.jpg" class="img-fluid" alt="Responsive image">
+                              </div>
+                              <div class="col-sm">
+                                <div class="container">
+                                    <div class="row justify-content-md-center">
+                                        <div class="media-body" style="margin: 50px">
+                                            <h5 class="mt-0">Top-aligned media</h5>
+                                            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+                                            <button type="button" class="btn btn-ttc btn-sm" style="border-radius: 25px; width: 150px;"> Ver mas +</button>    
+                                        </div>
+                                    </div>
+                                  </div>
+                              </div>
+                            </div>
+                          </div>
+                      </div>
+                    </div>
+                  </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
     </section>
 
     <!--Carrusel de intituciones/ intituciones participantes-->
