formulario de contacto

--- a/Index.html
+++ b/Index.html
@@ -243,32 +243,19 @@
     <!--Carrusel de intituciones/ intituciones participantes-->
     <section>
         <h1 style="font-size: xx-large;text-align: center;">Instituciones participantes</h1>
-        <div style="width: 100px;border-radius: 50%;background: blue;">logo</div>
-        <div>logo</div>
-        <div>logo</div>
-        <div>logo</div>
+        
     </section>
 
     <!--Formulario de Contacto / ¿Quieres ayudar?-->
-    <section >
-        <div class="container;"style="background: linear-gradient(to right, #58257B, #e62e7b);color: white;height: 350px;">
-            <h5 style="text-align:center;font-size: xx-large;">¿Quieres ayudar?</h5>
-                <div class="container" style="text-align: center;">
-                    <div class="float-right" style="width:500px;"> 
-                        <h1 style="font-size:x-large;text-align:center;">Envíanos un mensaje</h1>
-                        <input type="text" value="Nombre" style="border-radius:10px; border-style:unset;color:gray;width: 250px;height:30px;">
-                        <p></p>
-                        <input type="text" value="Correo" style="border-radius:10px;border-style:unset;color:gray;width: 250px;height:30px;">
-                        <p></p>
-                        <input type="text" value="Mensaje" style="border-radius:10px;border-style:unset;color:gray;width: 250px;height:100px;">
-                        <p></p>
-                        <button style="border-radius: 13px;border-style:unset;color:gray">Enviar</button>
-                    </div>
-                </div>
-                <div class="container">
-                    <div style="width: 500px;">
-                    <h1 style="font-size:x-large;text-align:center;">Información</h1>
-                    <p style="text-align:center;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim</p>
+    <section ><div style="background: linear-gradient(to right, #58257B, #e62e7b);color: white;width: 100%;">
+        <br><br>
+        <h5 style="font-size: xx-large;text-align: center;">¿Quieres ayudar?</h5>
+        <div class="container">
+            <div class="row">
+              <div class="col">
+                    <div style="width: 50%;">
+                    <h1 style="font-size:x-large;text-align;text-align: center;">Información</h1>
+                    <p style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim</p>
                     <p>986 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do México</p>
                     <p>T + 1 (55) 555-555
                     </p>
@@ -277,8 +264,23 @@
                     <p>example@gmail.com</p>
                     </div>
                 </div>
-                </div>
+                <div class="row">
+                <div class="col">
+                    <div class="text-center">
+                        <h1 style="font-size:x-large;">Envíanos un mensaje</h1>
+                        <input type="text" value="Nombre" style="border-radius:10px; border-style:unset;color:gray;width: 250px;height:30px;">
+                        <p></p>
+                        <input type="text" value="Correo" style="border-radius:10px;border-style:unset;color:gray;width: 250px;height:30px;">
+                        <p></p>
+                        <input type="text" value="Mensaje" style="border-radius:10px;border-style:unset;color:gray;width: 250px;height:100px;">
+                        <p></p>
+                        <button style="border-radius: 13px;border-style:unset;color:gray">Enviar</button>
+                    </div>
+              </div>
+            </div>
         </div>
+    </div>
+</div>
     </section>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
